--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     html, body {
       margin: 0;
       padding: 0;
-      min-height: 100%;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
-      overflow-x: hidden;
+      font-family: 'Abril Fatface', cursive;
     }
+
     @keyframes gradientMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
+    #topTitle {
+      font-size: 3.5rem;
+      margin: 0;
+      animation: colorShift 8s ease-in-out infinite;
+      text-align: center;
+    }
+
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
@@ -27,13 +35,7 @@
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
     }
-    #topTitle {
-      font-family: 'Abril Fatface', cursive;
-      font-size: 3.5rem;
-      margin: 0;
-      animation: colorShift 8s ease-in-out infinite;
-      text-align: center;
-    }
+
     #nyanZone {
       position: absolute;
       top: 170px;
@@ -41,134 +43,152 @@
       transform: translateX(-50%);
       z-index: 99;
     }
+
     #nyanCat {
       width: 240px;
     }
-    #iconBarJS {
-      position: absolute;
+
+    #iconBar {
+      position: fixed;
       top: 20px;
       right: 30px;
       display: flex;
       gap: 20px;
       z-index: 9999;
-      padding: 10px 15px;
-      background: rgba(255,255,255,0.3);
-      border-radius: 16px;
-      backdrop-filter: blur(5px);
     }
+
+    #iconBar a img {
+      width: 42px;
+      height: 42px;
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    #iconBar a:hover img {
+      transform: scale(1.2);
+      filter: brightness(1.3);
+    }
+
+    .content-section {
+      display: grid;
+      grid-template-columns: 1fr 1.5fr 1fr;
+      align-items: center;
+      height: 100vh;
+      gap: 20px;
+      padding: 40px;
+      box-sizing: border-box;
+    }
+
+    .gif-box img {
+      width: 500px;
+      height: 400px;
+      object-fit: cover;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+
     #flappySection {
       height: 100vh;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      flex-direction: column;
       padding: 20px;
+      background: #111;
     }
+
     #flappyCanvas {
       border: 3px solid white;
       border-radius: 10px;
       max-width: 90vw;
+      background: black;
     }
+
     #scoreDisplay {
       margin-top: 20px;
       color: white;
       font-size: 1.5rem;
       font-family: monospace;
     }
-    #muteBtn {
-      position: absolute;
-      left: 30px;
-      top: 20px;
-      z-index: 9999;
-      font-size: 1.5rem;
+
+    #soundBtn {
+      margin-top: 10px;
+      font-size: 1rem;
+      padding: 8px 16px;
+      border-radius: 8px;
       background: white;
       border: none;
-      border-radius: 8px;
-      padding: 5px 10px;
       cursor: pointer;
     }
+
   </style>
 </head>
 <body>
+
+  <!-- SABİT LOGO BAR -->
+  <div id="iconBar">
+    <a href="https://t.me/YOUR_TELEGRAM" target="_blank"><img src="Telegrampng.png" alt="Telegram"></a>
+    <a href="https://x.com/YOUR_X" target="_blank"><img src="Xpng.png" alt="X"></a>
+    <a href="https://dexscreener.com" target="_blank"><img src="Dexpng.png" alt="Dexscreener"></a>
+    <a href="https://coingecko.com" target="_blank"><img src="geckopng3.webp" alt="CoinGecko"></a>
+  </div>
+
+  <!-- BAŞLIK -->
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
     <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
       <h1 id="topTitle">Welcome BirthdayCat</h1>
     </div>
   </div>
 
+  <!-- NYAN CAT -->
   <div id="nyanZone">
     <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
 
-  <!-- OYUN ALANI -->
-  <section id="flappySection">
-    <button id="muteBtn">🔊</button>
-    <h2 style="color: white; font-family: 'Abril Fatface', cursive;">🎂 Flappy BCAT 🎮</h2>
-    <canvas id="flappyCanvas" width="660" height="480"></canvas>
-    <div id="scoreDisplay">Score: <span id="score">0</span></div>
+  <!-- GÖRSEL ALAN -->
+  <section class="content-section">
+    <div class="gif-box">
+      <img src="gozluk.gif" alt="Left Top">
+      <img src="gozluk.gif" alt="Left Bottom">
+    </div>
+    <div>
+      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 65%; border-radius: 20px; object-fit: cover; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
+        <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="gif-box">
+      <img src="gozluk.gif" alt="Right Top">
+      <img src="gozluk.gif" alt="Right Bottom">
+    </div>
   </section>
 
-  <!-- LOGO BAR -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const bar = document.createElement("div");
-      bar.id = "iconBarJS";
-      const logos = [
-        { href: "https://t.me/YOUR_TELEGRAM", src: "Telegrampng.png", alt: "Telegram" },
-        { href: "https://x.com/YOUR_X", src: "Xpng.png", alt: "X" },
-        { href: "https://dexscreener.com", src: "Dexpng.png", alt: "Dexscreener" },
-        { href: "https://coingecko.com", src: "geckopng3.webp", alt: "CoinGecko" }
-      ];
-      logos.forEach(logo => {
-        const a = document.createElement("a");
-        a.href = logo.href;
-        a.target = "_blank";
-        const img = document.createElement("img");
-        img.src = logo.src;
-        img.alt = logo.alt;
-        img.style.width = "42px";
-        img.style.height = "42px";
-        img.style.borderRadius = "8px";
-        img.style.transition = "transform 0.3s ease, filter 0.3s ease";
-        img.onmouseover = () => {
-          img.style.transform = "scale(1.2)";
-          img.style.filter = "brightness(1.3)";
-        };
-        img.onmouseout = () => {
-          img.style.transform = "scale(1)";
-          img.style.filter = "brightness(1)";
-        };
-        a.appendChild(img);
-        bar.appendChild(a);
-      });
-      document.body.appendChild(bar);
-    });
-  </script>
+  <!-- OYUN ALANI -->
+  <section id="flappySection">
+    <h2 style="color: white;">🎂 Flappy BCAT 🎮</h2>
+    <canvas id="flappyCanvas" width="660" height="480"></canvas>
+    <div id="scoreDisplay">Score: <span id="score">0</span></div>
+    <button id="soundBtn">🔇 Ses Kapalı</button>
+  </section>
 
-  <!-- OYUN SCRIPT -->
   <script>
     const canvas = document.getElementById("flappyCanvas");
     const ctx = canvas.getContext("2d");
 
     const bgImage = new Image();
-    bgImage.src = "u1ZpVC.png";
+    bgImage.src = "u1ZpVC.png"; // arka plan görseli
 
     const nyanImg = new Image();
-    nyanImg.src = "nyan-cat.gif";
+    nyanImg.src = "nyan-cat.gif"; // karakter
 
-    const jumpSound = new Audio("jump.mp3");
-    jumpSound.volume = 0.5;
-    let muted = false;
+    const jumpSound = new Audio("jump.mp3"); // isteğe bağlı ses
+    let soundEnabled = false;
 
-    const muteBtn = document.getElementById("muteBtn");
-    muteBtn.addEventListener("click", () => {
-      muted = !muted;
-      muteBtn.textContent = muted ? "🔇" : "🔊";
+    document.getElementById("soundBtn").addEventListener("click", () => {
+      soundEnabled = !soundEnabled;
+      document.getElementById("soundBtn").textContent = soundEnabled ? "🔊 Ses Açık" : "🔇 Ses Kapalı";
     });
 
     let bgX = 0;
     const scrollSpeed = 2;
-
     let score = 0;
     let isPlaying = true;
 
@@ -182,21 +202,23 @@
       jumpStrength: -10
     };
 
+    function jump() {
+      nyan.velocity = nyan.jumpStrength;
+      if (soundEnabled) jumpSound.play();
+    }
+
     document.addEventListener("keydown", (e) => {
       if (e.code === "Space") jump();
     });
-    canvas.addEventListener("click", jump);
 
-    function jump() {
-      nyan.velocity = nyan.jumpStrength;
-      if (!muted) jumpSound.play();
-    }
+    canvas.addEventListener("click", jump);
 
     function draw() {
       if (!isPlaying) return;
 
       bgX -= scrollSpeed;
       if (bgX <= -canvas.width) bgX = 0;
+
       ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
       ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
 
@@ -215,9 +237,7 @@
       requestAnimationFrame(draw);
     }
 
-    bgImage.onload = () => {
-      draw();
-    };
+    bgImage.onload = () => draw();
   </script>
 </body>
 </html>
