--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BirthdayCat</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
   <style>
     html, body {
       margin: 0;
@@ -68,69 +69,41 @@
       filter: brightness(1.3);
     }
 
-    .content-section {
-      display: grid;
-      grid-template-columns: 1fr 1.5fr 1fr;
-      align-items: center;
-      height: 100vh;
-      gap: 20px;
-      padding: 40px;
-      box-sizing: border-box;
-    }
-
-    .gif-box img {
-      width: 500px;
-      height: 400px;
-      object-fit: cover;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    }
-
-    #flappySection {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      padding: 20px;
-      background: #111;
-    }
-
-    #flappyCanvas {
-      border: 3px solid white;
-      border-radius: 10px;
-      max-width: 90vw;
-      background: black;
-    }
-
-    #scoreDisplay {
-      margin-top: 20px;
+    #soundToggle {
+      position: fixed;
+      top: 20px;
+      left: 30px;
+      z-index: 9999;
+      font-size: 1.2rem;
+      background: rgba(0,0,0,0.4);
       color: white;
-      font-size: 1.5rem;
-      font-family: monospace;
-    }
-
-    #soundBtn {
-      margin-top: 10px;
-      font-size: 1rem;
-      padding: 8px 16px;
-      border-radius: 8px;
-      background: white;
       border: none;
+      border-radius: 8px;
+      padding: 6px 12px;
       cursor: pointer;
     }
-
   </style>
 </head>
+
 <body>
 
-  <!-- SABİT LOGO BAR -->
+  <!-- ÜSTTEKİ SABİT BAR -->
   <div id="iconBar">
-    <a href="https://t.me/YOUR_TELEGRAM" target="_blank"><img src="Telegrampng.png" alt="Telegram"></a>
-    <a href="https://x.com/YOUR_X" target="_blank"><img src="Xpng.png" alt="X"></a>
-    <a href="https://dexscreener.com" target="_blank"><img src="Dexpng.png" alt="Dexscreener"></a>
-    <a href="https://coingecko.com" target="_blank"><img src="geckopng3.webp" alt="CoinGecko"></a>
+    <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
+      <img src="Telegrampng.png" alt="Telegram">
+    </a>
+    <a href="https://x.com/YOUR_X" target="_blank">
+      <img src="Xpng.png" alt="X">
+    </a>
+    <a href="https://dexscreener.com" target="_blank">
+      <img src="Dexpng.png" alt="Dexscreener">
+    </a>
+    <a href="https://coingecko.com" target="_blank">
+      <img src="geckopng3.webp" alt="CoinGecko">
+    </a>
   </div>
+
+  <button id="soundToggle">🔇</button>
 
   <!-- BAŞLIK -->
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
@@ -144,53 +117,53 @@
     <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
 
-  <!-- GÖRSEL ALAN -->
-  <section class="content-section">
-    <div class="gif-box">
-      <img src="gozluk.gif" alt="Left Top">
-      <img src="gozluk.gif" alt="Left Bottom">
+  <!-- GÖRSEL VİDEO ALANI -->
+  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
+      <img src="gozluk.gif" alt="GIF1" style="width: 500px; height: 400px; border-radius: 20px;" />
+      <img src="gozluk.gif" alt="GIF2" style="width: 500px; height: 400px; border-radius: 20px;" />
     </div>
-    <div>
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 65%; border-radius: 20px; object-fit: cover; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
+
+    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative;">
+      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
         <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
     </div>
-    <div class="gif-box">
-      <img src="gozluk.gif" alt="Right Top">
-      <img src="gozluk.gif" alt="Right Bottom">
+
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
+      <img src="gozluk.gif" alt="GIF3" style="width: 500px; height: 400px; border-radius: 20px;" />
+      <img src="gozluk.gif" alt="GIF4" style="width: 500px; height: 400px; border-radius: 20px;" />
     </div>
   </section>
 
   <!-- OYUN ALANI -->
-  <section id="flappySection">
-    <h2 style="color: white;">🎂 Flappy BCAT 🎮</h2>
-    <canvas id="flappyCanvas" width="660" height="480"></canvas>
-    <div id="scoreDisplay">Score: <span id="score">0</span></div>
-    <button id="soundBtn">🔇 Ses Kapalı</button>
+  <section style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <h2 style="color: white; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
+
+    <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; max-width: 90vw;"></canvas>
+
+    <div style="margin-top: 20px; color: white; font-size: 1.5rem;">
+      Score: <span id="score">0</span>
+    </div>
   </section>
 
+  <audio id="jumpSound" src="jump.mp3"></audio>
+  <audio id="bgMusic" src="bg-music.mp3" loop></audio>
+
+  <!-- OYUN JS -->
   <script>
     const canvas = document.getElementById("flappyCanvas");
     const ctx = canvas.getContext("2d");
 
-    const bgImage = new Image();
-    bgImage.src = "u1ZpVC.png"; // arka plan görseli
-
     const nyanImg = new Image();
-    nyanImg.src = "nyan-cat.gif"; // karakter
+    nyanImg.src = "nyan-cat.gif";
 
-    const jumpSound = new Audio("jump.mp3"); // isteğe bağlı ses
-    let soundEnabled = false;
-
-    document.getElementById("soundBtn").addEventListener("click", () => {
-      soundEnabled = !soundEnabled;
-      document.getElementById("soundBtn").textContent = soundEnabled ? "🔊 Ses Açık" : "🔇 Ses Kapalı";
-    });
+    const bgImage = new Image();
+    bgImage.src = "u1ZpVC.png"; // senin gönderdiğin 448x256 görsel
 
     let bgX = 0;
     const scrollSpeed = 2;
-    let score = 0;
-    let isPlaying = true;
 
     const nyan = {
       x: 50,
@@ -202,10 +175,24 @@
       jumpStrength: -10
     };
 
-    function jump() {
-      nyan.velocity = nyan.jumpStrength;
-      if (soundEnabled) jumpSound.play();
-    }
+    let score = 0;
+    let isPlaying = true;
+
+    const jumpSound = document.getElementById("jumpSound");
+    const bgMusic = document.getElementById("bgMusic");
+    const soundBtn = document.getElementById("soundToggle");
+    let soundOn = false;
+
+    soundBtn.onclick = () => {
+      soundOn = !soundOn;
+      if (soundOn) {
+        bgMusic.play();
+        soundBtn.textContent = "🔊";
+      } else {
+        bgMusic.pause();
+        soundBtn.textContent = "🔇";
+      }
+    };
 
     document.addEventListener("keydown", (e) => {
       if (e.code === "Space") jump();
@@ -213,15 +200,21 @@
 
     canvas.addEventListener("click", jump);
 
+    function jump() {
+      nyan.velocity = nyan.jumpStrength;
+      if (soundOn) jumpSound.play();
+    }
+
     function draw() {
       if (!isPlaying) return;
 
+      // Arka plan
       bgX -= scrollSpeed;
       if (bgX <= -canvas.width) bgX = 0;
-
       ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
       ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
 
+      // Fizik
       nyan.velocity += nyan.gravity;
       nyan.y += nyan.velocity;
 
@@ -233,11 +226,13 @@
 
       ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
       document.getElementById("score").textContent = score;
+      score++;
 
       requestAnimationFrame(draw);
     }
 
     bgImage.onload = () => draw();
   </script>
+
 </body>
 </html>
